--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,34 @@ body{
   
   
 }
+
+.image-container{
+position: relative;
+transition: transform 0.2s;
+padding-left: 18px;
+
+
+
+}
+
+
+.image-container:hover{
+cursor: pointer;
+transform: scale(1.1);
+}
+
+.image-container:hover.overlay{
+  opacity: 1;
+}
+
+.overlay{
+  position: absolute;
+  background: rgba(0.0.0.0.8);
+  width: 100%;
+  transition: 0.5 ease;
+  opacity: 0;
+  bottom: 0;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
