--- a/src/App.css
+++ b/src/App.css
@@ -26,15 +26,15 @@ cursor: pointer;
 transform: scale(1.1);
 }
 
-.image-container:hover.overlay{
+.image-container:hover .overlay{
   opacity: 1;
 }
 
 .overlay{
   position: absolute;
-  background: rgba(0.0.0.0.8);
+  background: rgba(0,0,0,0.8);
   width: 100%;
-  transition: 0.5 ease;
+  transition: 0.5s ease;
   opacity: 0;
   bottom: 0;
   font-size: 20px;
