commit on master

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@ body{
 .image-container{
 position: relative;
 transition: transform 0.2s;
-padding-left: 18px;
+padding-left: 10px;
+padding-right: 10px;
 
 
 
@@ -33,7 +34,7 @@ transform: scale(1.1);
 .overlay{
   position: absolute;
   background: rgba(0,0,0,0.8);
-  width: 100%;
+  width: 93.8%;
   transition: 0.5s ease;
   opacity: 0;
   bottom: 0;
